peach/platform/inlets-server/config/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: inlets-exit
  namespace: inlets
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - inlets.gw.ik.am
  - synology.gw.ik.am
  - synology.ik.am
  - "*.synology.ik.am"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: inlets-exit
      port: 6868
